# keymap-overlay

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luarc.json  .mbake.toml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  keymap-overlay.lua  mise.toml  pyproject.toml  pyrightconfig.json  pytest.ini
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/keymap-cli/: Cargo.toml
crates/keymap-cli/src/: main.rs
crates/keymap-core/: Cargo.toml
crates/keymap-core/src/: lib.rs
doc/: design.md
example/1/: config.json  keyboard.json
example/1/keymap/: config.h  keymap.c  rules.mk
example/2/: config.h  config.json
example/2/keymap/: config.h  keymap.c  rules.mk
keyboards/doio/kb16/rev2/: keyboard.json
keyboards/doio/kb16/rev2/keymaps/layer-notify/: config.h  keymap.c
keyboards/salicylic_acid3/insixty_en/: config.h
keyboards/salicylic_acid3/insixty_en/keymaps/layer-notify/: config.h  keymap.c
scripts/: __init__.py  count_layers.py  generate_custom_keycodes.py  generate_key_to_layer.py  generate_keycodes.py  generate_qmk_keymap_from_vitaly.py  generate_qmk_keymap_postprocess.py  generate_vial.py  generate_vitaly_layout.py  postprocess_keymap.py  postprocess_qmk_keymap.py  qmk_info_to_vial.py  run_output.py  run_to_tmp.py  sync_keycodes.py  update_vitaly_layout.py  vitaly_to_qmk.py
src/: types.py  util.py
tests/: test_generate_qmk_keymap_from_vitaly.py  test_postprocess_qmk_keymap.py  test_types.py  test_vitaly_to_qmk.py
tests/data/: custom-keycodes.json  key-to-layer.json  keyboard.json  keycodes.json  qmk-keymap.json  vial.json  vitaly.json
typings/: hid.pyi
typings/qmk/: __init__.pyi  keycodes.pyi
