[project]
name = "keymap-overlay"
version = "0.1.0"
description = "Keymap overlay for Hammerspoon showing QMK layers"

readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0.0",
  "typer>=0.12.0",
  "hjson>=3.1.0",
  "jsonschema>=4.25.1",
]

[project.scripts]
count-layers = "scripts.count_layers:app"
generate-custom-keycodes = "scripts.generate_custom_keycodes:app"
generate-key-to-layer = "scripts.generate_key_to_layer:app"
generate-keycodes = "scripts.generate_keycodes:app"
generate-qmk-keymap-from-vitaly = "scripts.generate_qmk_keymap_from_vitaly:app"
generate-vial = "scripts.generate_vial:app"
generate-vitaly-layout = "scripts.generate_vitaly_layout:app"
postprocess-qmk-keymap = "scripts.postprocess_qmk_keymap:app"
run-output = "scripts.run_to_tmp:app"
run-to-tmp = "scripts.run_to_tmp:app"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["qmk_firmware/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["scripts", "src"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
